# dbcrudgen-cpp-mssql

./: .gitignore  CMakeLists.txt
config/database/: mssql.sql
config/linux/: linux.txt
include/connectors/macos/msodbcsql18/18.3.2.1/: INSTALL_RECEIPT.json  odbcinst.ini
include/connectors/macos/msodbcsql18/18.3.2.1/share/doc/msodbcsql18/: RELEASE_NOTES
include/connectors/macos/msodbcsql18/18.3.2.1/share/msodbcsql18/resources/en_US/: msodbcsqlr18.rll
include/connectors/macos/unixODBC-2.2.12/include/: log.h  odbcinstext.h  sqlucode.h  sqp.h
include/connectors/macos/unixODBC-2.3.12/: config.h.in  unixodbc_conf.h
include/connectors/macos/unixODBC-2.3.12/Drivers/nn/: yyparse.c
include/connectors/macos/unixodbc/2.3.11/include/: autotest.h  odbcinstext.h  sqlucode.h
lib/macos/msodbcsql/13.1.9.2/: INSTALL_RECEIPT.json  odbcinst.ini
lib/macos/msodbcsql/13.1.9.2/.brew_home/: .bazelrc
lib/macos/msodbcsql/13.1.9.2/include/: msodbcsql.h
lib/macos/msodbcsql/13.1.9.2/share/doc/msodbcsql/: LICENSE.txt  RELEASE_NOTES
lib/macos/msodbcsql18/18.3.2.1/: INSTALL_RECEIPT.json
lib/macos/msodbcsql18/18.3.2.1/.brew/: msodbcsql18.rb
lib/macos/msodbcsql18/18.3.2.1/.brew_home/: .bazelrc
src/: main.cpp
src/databases/mssql/connectors/: MSSQLDbConnector.h
src/databases/mssql/decomposer/: SysDatabasesDecomposer.h
src/databases/mssql/executor/: MSSQLQueryExecutor.h
src/orm/templates/mssql/: MSSQLStrTemplates.h
